freebsd-glue (0.1.1) UNRELEASED; urgency=low

  * Put includes of <sys/kern/*.h> OUTSIDE the header protection (which
    they intentionally duplicate).

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 18:20:40 +0200

freebsd-glue (0.1.0) unstable; urgency=low

  * Fix header pollution in <unistd.h> by moving non-trivial inline
    functions into static objects of their own.
  * Add nlm_syscall() inline function.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 16:21:56 +0200

freebsd-glue (0.0.10) unstable; urgency=low

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.

  [ Robert Millan ]
  * Add <net/ethernet.h> which includes <netinet/ether.h> (for
    ether_ntoa).

 -- Robert Millan <rmh@debian.org>  Thu, 01 Aug 2013 21:17:17 +0200

freebsd-glue (0.0.9) unstable; urgency=low

  * Make <sys/_types.h> and <machine/_types.h> usable on non-kFreeBSD.

 -- Robert Millan <rmh@debian.org>  Mon, 22 Jul 2013 21:55:14 +0200

freebsd-glue (0.0.8) unstable; urgency=low

  * Include <grp.h> in <unistd.h> (for initgroups).
  * Add __containerof() to <sys/cdefs.h>.
  * Add roundup2 in <sys/param.h>. It is no longer provided by glibc
    (??).

 -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:21:09 +0200

freebsd-glue (0.0.7) unstable; urgency=low

  * Replace versions of freebsd-buildutils which included their own
    yacc. (Closes: #715138)
  * Misc fixes to accomodate for FreeBSD 9.1.

 -- Robert Millan <rmh@debian.org>  Tue, 09 Jul 2013 22:32:45 +0200

freebsd-glue (0.0.6) unstable; urgency=low

  * Misc additions to simplify PPP patchset in freebsd-utils.
  * Add yacc -> byacc symlink.
  * Add _SAFE macros in <sys/queue.h>.

 -- Robert Millan <rmh@debian.org>  Fri, 05 Jul 2013 22:02:54 +0200

freebsd-glue (0.0.5) unstable; urgency=low

  * Drag libbsd counterparts into <stdio.h> and <stdlib.h>.

 -- Robert Millan <rmh@debian.org>  Wed, 19 Jun 2013 21:05:20 +0200

freebsd-glue (0.0.4) unstable; urgency=high

  * Add libutil.h and nlist.h.
